--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
-    "js-cookie": "^3.0.5",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
